--- a/style/main.scss
+++ b/style/main.scss
@@ -8,6 +8,7 @@
 :root {
   z-index: inherit;
   z-index:5;
+  color:var(--white-2);
 }
 body {
 
