--- a/style/navbar.scss
+++ b/style/navbar.scss
@@ -1,8 +1,5 @@
 nav{
-  position:fixed;
-  z-index:100;
 }
-
 .navbar{
   //add metal divider betweeb the uptions with a little lamp thing ?
   display: flex;
@@ -14,18 +11,28 @@ nav{
   width: 100%;
   position: fixed;
   top: 0;
-  padding: 0.0em 0em;
-  background-color: hsl(320, 5%, 5.5%);
-  background-image: url("https://www.transparenttextures.com/patterns/felt.png");
-  background-size: 33%;
-  background-blend-mode: color-dodge;
-  box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5),
-              0px 10px 15px rgba(0, 0, 0, 1),
-              0px 5px 10px rgba(0, 0, 0, 0.2);
+
+
 }
 
+.navbar::before {
+    content: ""; /* Essential for rendering the ::before pseudo-element */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: hsl(320, 5%, 5.5%);
+    background-image: url("https://www.transparenttextures.com/patterns/felt.png");
+    background-size: 33%;
+    background-blend-mode: color-dodge;
+    box-shadow: 0px 10px 20px rgba(0, 0, 0, 0.5),
+                0px 10px 15px rgba(0, 0, 0, 1),
+                0px 5px 10px rgba(0, 0, 0, 0.2);
+    z-index: 5; /* Ensures ::before stays behind the navbar content */
+}
 nav a {
-  z-index: 5;
+  z-index: 100;
   text-decoration: none;
   font-weight: bold;
   font-size: 1.5em;
@@ -37,7 +44,6 @@ nav a {
       1px -1px 0 rgba(0, 0, 0, 0.3),
       -1px 1px 0 rgba(0, 0, 0, 0.3);
 }
-
 
 .navlink {
   color: hsl(0, 0%, 30%);
@@ -72,5 +78,12 @@ nav a {
 }
 
 button.toggle_userElelemet {
-  z-index:100!important;
+    all:unset;
+    position: absolute; /* Removes it from the flow */
+    right: 0.2em; /* Adjust the value to add space from the right edge */
+    top: 50%; /* Centers vertically within the navbar */
+    transform: translateY(-40%); /* Adjusts to truly center vertically */
+
+    z-index: 101; /* Higher than the ::before element */
 }
+
